# rpg_vision-based_slam

./: .gitmodules  CMakeLists.txt  README.md
datasets/EuRoC/calib/Vicon_room/: calib.yaml
datasets/UZH_FPV/calib/indoor_forward_calib_snapdragon/: camchain-imucam-..indoor_forward_calib_snapdragon_imu.yaml  camchain-imucam-..indoor_forward_calib_snapdragon_imu_simple.yaml  imu.yaml
experiments/EuRoC/V2_01_easy/colmap_fitted_spline/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/colmap_global_alignment/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/fit_spline_on_gp_meas/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization/continuous_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization/discrete_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization_gi/continuous_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization_gi/discrete_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization_gv/continuous_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization_gv/discrete_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization_vi/continuous_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/full_batch_optimization_vi/discrete_time/: v2_01_easy.yaml
experiments/EuRoC/V2_01_easy/spline_global_alignment/: v2_01_easy.yaml
experiments/UZH_FPV/indoor_forward_3_snapdragon/colmap_fitted_spline/: indoor_forward_3_snapdragon.yaml
experiments/UZH_FPV/indoor_forward_3_snapdragon/colmap_global_alignment/: indoor_forward_3_snapdragon.yaml
experiments/UZH_FPV/indoor_forward_3_snapdragon/full_batch_optimization/continuous_time/: indoor_forward_3_snapdragon.yaml
experiments/UZH_FPV/indoor_forward_3_snapdragon/full_batch_optimization/discrete_time/: indoor_forward_3_snapdragon.yaml
experiments/UZH_FPV/indoor_forward_3_snapdragon/spline_global_alignment/: indoor_forward_3_snapdragon.yaml
include/discrete_time_estimator/: estimator.h  state.h
include/optimization/: gravity_norm_cost_functor.h  lie_local_parametrization.h
include/optimization/continuous_time/: ceres_spline_helper.h  ceres_spline_helper_old.h  global_position_cost_functor.h  imu_cost_functor.h  make_davis_gt_cost_functor.h  orientation_cost_functor.h  pose_cost_functor.h  position_cost_functor.h  reprojection_cost_functor.h
include/optimization/discrete_time/: error_interface.h  global_position_cost_functor.h  imu_cost_functor.h  pose_cost_functor.h  pose_local_parameterization.h  reprojection_cost_functor.h  speed_cost_functor.h
include/sensor/: camera.h  camera_calib.h  global_position_sensor.h  imu.h  imu_calib.h
include/spline/: bspline_so3r3.h  spline_common.h
include/util/: assert.h  colmap_utils.h  eigen_utils.h  endian.h  load.h  load_calibration.h  matrix_operations.h  print.h  save.h  trajectory_utils.h  utils.h
scripts/python/: create_colmap_project_euroc_dataset.py  create_colmap_project_uzhfpv_dataset.py  extract_cam_imu_data_from_rosbag.py  extract_euroc_groundtruth.py  extract_from_euroc_rosbag.py  extract_traj_estimate_from_colmap.py  extract_traj_estimate_from_colmap_euroc.py  extract_traj_estimate_from_colmap_uzhfpv.py  from_kalibr_to_simple_camimu_calib_yaml.py  initialize_spline_to_global_frame_spatial_alignment.py  initialize_spline_to_global_frame_spatial_alignment_uzhfpv.py  make_global_measurements_euroc.py  make_gt_rosbag_uzhfpv.py  make_leica_minimal.py  plot_results_continuous_time.py  plot_results_continuous_time_gi.py  plot_results_continuous_time_gv.py  plot_results_continuous_time_vi.py  plot_results_discrete_time.py  plot_results_discrete_time_gi.py  plot_results_discrete_time_gv.py  plot_results_discrete_time_vi.py  plot_results_spline_fitting_to_colmap_traj.py  plot_results_spline_fitting_to_gp_meas.py  plot_results_spline_global_frame_alignment.py  transform_colmap_to_global_frame.py
scripts/python/rpg_vision_based_slam/: alignment.py  calibration.py  colmap_params.py  euroc_flags.py  euroc_util.py  flags.py  plots.py  pose.py  time_alignment.py  util_colmap.py  utils.py  uzhfpv_flags.py  uzhfpv_leica_parser.py  uzhfpv_util.py
src/: align_colmap_to_imu.cpp  align_spline_to_global_frame.cpp  fit_spline_to_colmap.cpp  fit_spline_to_gp_measurements.cpp  optimize_continuous_time.cpp  optimize_discrete_time.cpp  optimize_gi_continuous_time.cpp  optimize_gi_discrete_time.cpp  optimize_gv_continuous_time.cpp  optimize_gv_discrete_time.cpp  optimize_vi_continuous_time.cpp  optimize_vi_discrete_time.cpp
